--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,13 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: mysql2
+  database: chamada_inteligente
+  host: localhost
+  username: chamadainteligente_d
+  password: password
+  port: 3306
+  encoding: utf8
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
